[package]
name = "nanohttp"
version = "0.2.0"
edition = "2021"
description = "A library for parsing http requests and building http responses."
license = "MIT"
homepage = "https://github.com/aronlebani/nanohttp.git"
repository = "https://github.com/aronlebani/nanohttp.git"
authors = ["Aron Lebani"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
